tests/error/protocol_errors/callable_return.err
Error: Protocols are not allowed as return types (at $FILE:10:14)
   | 
 8 | 
 9 | @guppy
10 | def main() -> Callable[[int], int]:
   |               ^^^^^^^^^^^^^^^^^^^^ `Callable` is a protocol, which is not allowed as a return
   |                                    type

Help: Consider returning a `Function` type instead

Guppy compilation failed due to 1 previous error
